RESOLVED FIXED91449
[Chromium] EventSender shouldn't know about TestShell
https://bugs.webkit.org/show_bug.cgi?id=91449
Summary [Chromium] EventSender shouldn't know about TestShell
Adam Barth
Reported 2012-07-16 17:19:57 PDT
[Chromium] EventSender shouldn't know about TestShell
Attachments
Works except for WebViewHost (4.55 KB, patch)
2012-07-16 17:20 PDT, Adam Barth
no flags
Patch (15.11 KB, patch)
2012-07-20 01:15 PDT, Adam Barth
no flags
Archive of layout-test-results from gce-cr-linux-06 (136.68 KB, application/zip)
2012-07-20 02:34 PDT, WebKit Review Bot
no flags
Patch (12.55 KB, patch)
2012-07-24 01:33 PDT, jochen
no flags
Patch (15.01 KB, patch)
2012-07-24 01:47 PDT, jochen
no flags
Adam Barth
Comment 1 2012-07-16 17:20:24 PDT
Created attachment 152651 [details] Works except for WebViewHost
Adam Barth
Comment 2 2012-07-16 17:21:29 PDT
We're somewhat blocked on EventSender until we figure out what we're doing with WebViewHost. I emailed webkit-dev with that question.
Adam Barth
Comment 3 2012-07-20 01:15:13 PDT
jochen
Comment 4 2012-07-20 01:24:00 PDT
This patch looks good
WebKit Review Bot
Comment 5 2012-07-20 02:33:59 PDT
Comment on attachment 153441 [details] Patch Attachment 153441 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/13307211 New failing tests: editing/pasteboard/copy-standalone-image-crash.html editing/deleting/skip-virama-001.html editing/input/page-up-down-scrolls.html editing/input/caret-at-the-edge-of-input.html editing/selection/caret-mode-paragraph-keys-navigation.html editing/deleting/forward-delete-key.html editing/input/scroll-to-edge-if-line-break-at-end-of-document-textarea.html editing/input/scroll-viewport-page-up-down.html editing/input/reveal-caret-of-multiline-input.html editing/deleting/delete-ligature-002.html editing/input/password-echo-passnode2.html editing/deleting/delete-ligature-001.html editing/deleting/delete-ligature-003.html editing/input/scroll-to-edge-if-line-break-at-end-of-document-contenteditable.html editing/input/password-echo-passnode.html editing/input/reveal-edit-on-input-vertically.html editing/selection/button-right-click.html editing/input/password-echo-passnode3.html editing/input/password-echo-textnode.html editing/selection/5354455-2.html editing/input/reveal-contenteditable-on-input-vertically.html editing/input/scroll-to-edge-if-paragraph-separator-at-end-of-document-contenteditable.html editing/input/caret-at-the-edge-of-contenteditable.html editing/deleting/delete-by-word-001.html editing/input/style-change-during-input.html editing/deleting/delete-by-word-002.html editing/deleting/5729680.html editing/input/option-page-up-down.html
WebKit Review Bot
Comment 6 2012-07-20 02:34:04 PDT
Created attachment 153456 [details] Archive of layout-test-results from gce-cr-linux-06 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-06 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
Adam Barth
Comment 7 2012-07-20 02:43:40 PDT
I borked it!
jochen
Comment 8 2012-07-24 01:27:24 PDT
Comment on attachment 153441 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=153441&action=review > Tools/DumpRenderTree/chromium/TestShell.cpp:151 > + m_eventSender = adoptPtr(new EventSender(webViewHost())); at this point, webViewHost() returns 0. It will be created later in TestShell::createMainWindow.
Adam Barth
Comment 9 2012-07-24 01:33:40 PDT
Ah, makes sense.
jochen
Comment 10 2012-07-24 01:33:52 PDT
WebKit Review Bot
Comment 11 2012-07-24 01:37:35 PDT
Comment on attachment 153987 [details] Patch Attachment 153987 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/13333324
Adam Barth
Comment 12 2012-07-24 01:43:19 PDT
Comment on attachment 153987 [details] Patch This looks like a good solution. It looks like you have a compile error on Linux to work though.
jochen
Comment 13 2012-07-24 01:47:21 PDT
jochen
Comment 14 2012-07-24 01:47:49 PDT
(In reply to comment #12) > (From update of attachment 153987 [details]) > This looks like a good solution. It looks like you have a compile error on Linux to work though. maybe I should include all files in the patch.. I guess that will help compilation
WebKit Review Bot
Comment 15 2012-07-24 03:24:14 PDT
Comment on attachment 153989 [details] Patch Clearing flags on attachment: 153989 Committed r123449: <http://trac.webkit.org/changeset/123449>
WebKit Review Bot
Comment 16 2012-07-24 03:24:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.